--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,10 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
-    "nodemailer": "^7.0.5"
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.5",
+    "openai": "^5.12.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
