--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@google-cloud/vision": "^5.3.3",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "colors": "^1.4.0",
@@ -23,7 +24,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "seed": "node seeder.js",
+    "seed:destroy": "node seeder.js -d"
   },
   "keywords": [],
   "author": "",
