--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
-    "openai": "^5.12.2"
+    "openai": "^5.12.2",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
