--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "@google-cloud/vision": "^5.3.3",
     "bcrypt": "^6.0.0",
-    "cloudinary": "^2.7.0",
+    "cloudinary": "1.41.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
